--- a/front/src/components/Cards/Cards.module.css
+++ b/front/src/components/Cards/Cards.module.css
@@ -1,23 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Lobster&family=Poor+Story&display=swap');
 
 
-.page{
-    font-family: 'Inconsolata', monospace;
-    font-family: 'Lobster', cursive;
-    font-family: 'Poor Story', cursive;
+.divCards{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #05AFF2;
-    border: #2A0859;
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 1rem;
 }
 
-.page h1{
+.divCards h1{
     font-family: 'Inconsolata', monospace;
     font-family: 'Lobster', cursive;
     font-family: 'Poor Story', cursive;
@@ -25,9 +16,8 @@
     flex-direction: column;
     justify-content: center;
     color: #05AFF2;
-    border: #2A0859;
-    width: 60%;
-    margin-left: 35%;
+    max-width: 60%;
+    margin-left: 40%;
     margin-right: 20%;
     margin-top: 2rem;
     margin-bottom: 2rem;
