--- a/front/src/components/Form/Form.module.css
+++ b/front/src/components/Form/Form.module.css
@@ -1,68 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Lobster&family=Poor+Story&display=swap');
 
-.divContenedor{
-    font-family: 'Inconsolata', monospace;
-    font-family: 'Lobster', cursive;
-    font-family: 'Poor Story', cursive;
+
+.divForm{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: none;
-    border: #2A0859;
-    border-radius: 15px;
-    height: fit-content;
+    background-color: #2A0859;
+    max-width: 18%;
+    padding: 2rem;
+    margin-left: 40%;
+    margin-right: 42%;
+    margin-top: 6rem;
+    box-shadow: 10px 10px 91px 0px rgba(208,64,212,0.75);
+    -webkit-box-shadow: 10px 10px 91px 0px rgba(208,64,212,0.75);
+    -moz-box-shadow: 10px 10px 91px 0px rgba(208,64,212,0.75);
 }
 
-
-.divContenedor h2{
+.divForm label{
     font-family: 'Inconsolata', monospace;
     font-family: 'Lobster', cursive;
     font-family: 'Poor Story', cursive;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 80%;
     color: #05AFF2;
-    margin: 0.8rem;
-    padding-left: 30%;
-    padding-right: 40%;
+    background-color: #2A0859;
+    font-size: 18px;
+    border: none;
 }
 
-.divContenedor img{
+.divForm input{
     font-family: 'Inconsolata', monospace;
     font-family: 'Lobster', cursive;
     font-family: 'Poor Story', cursive;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 40%;
-    margin-top: 2rem;
-    margin-left: 30%;
-    margin-right: 30%;
+    color: #05AFF2;
+    background-color: #2A0859;
+    font-size: 15px;
+    border: 1px solid #05AFF2;
 }
 
-.divContenedor button{
+.divForm p{
+    font-family: 'Inconsolata', monospace;
+    font-family: 'Lobster', cursive;
+    font-family: 'Poor Story', cursive;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #05AFF2;
+    background-color: #2A0859;
+}
+
+.divForm button{
     font-family: 'Inconsolata', monospace;
     font-family: 'Lobster', cursive;
     font-family: 'Poor Story', cursive;
     background-color: #180640;
-    position: relative;
-    display: inline-block;
     color: #05AFF2;
     width: fit-content;
-    border-radius: 20px;
     margin-top: 2rem;
-    margin-left: 18%;
-    margin-right: 20%;
-    border: hidden;
-    letter-spacing: 2px;
-    font-size: 11px;
-    overflow: hidden;
-    transition: 0.2s;
+    border: 1px solid #05AFF2;
+    letter-spacing: 1px;
+    font-size: 18px;
 }
 
-.divContenedor button:hover{
-    background-color: #2A0859;
-    box-shadow: 0 0 10px #2A0859, 0 0 40px #2A0859, 0 0 80px #2A0859;
+.error{
+    color: red;
 }
-
