--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,6 @@
 body{
    background: linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)),
-   url('./components/img/AVEResteOtro.jpg');
+   url('./components/img/universo-galaxia_2560x1440_xtrafondos.com.jpg');
 }
 
 body::-webkit-scrollbar{
