--- a/front/src/components/Card/Card.module.css
+++ b/front/src/components/Card/Card.module.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: none;
+    /* background-color: #2A0859;  */
     border: #2A0859;
     border-radius: 15px;
     height: fit-content;
@@ -66,3 +66,6 @@
     box-shadow: 0 0 10px #2A0859, 0 0 40px #2A0859, 0 0 80px #2A0859;
 }
 
+.divContenedor a{
+    text-decoration: none;
+}
